--- a/zeppelin-web/package.json
+++ b/zeppelin-web/package.json
@@ -28,7 +28,8 @@
     "grunt-dom-munger": "^3.4.0",
     "headroom.js": "^0.9.3",
     "moment": "^2.18.1",
-    "moment-duration-format": "^1.3.0"
+    "moment-duration-format": "^1.3.0",
+    "scrollmonitor": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.4",
