--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
     <commons.io.version>2.4</commons.io.version>
     <commons.collections.version>3.2.1</commons.collections.version>
     <commons.logging.version>1.1.1</commons.logging.version>
+    <commons.cli.version>1.3.1</commons.cli.version>
     <shiro.version>1.2.3</shiro.version>
 
     <!-- test library versions -->
@@ -231,6 +232,12 @@
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
         <version>${commons.logging.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons.cli.version}</version>
       </dependency>
 
       <dependency>
