--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
     <commons.collections.version>3.2.1</commons.collections.version>
     <commons.logging.version>1.1.1</commons.logging.version>
     <shiro.version>1.2.3</shiro.version>
-    <netty.version>4.0.29.Final</netty.version>
+    <netty.version>4.1.12.Final</netty.version>
 
     <!-- test library versions -->
     <junit.version>4.12</junit.version>
@@ -132,6 +132,8 @@
     <plugin.antrun.version>1.7</plugin.antrun.version>
     <plugin.download.version>1.3.0</plugin.download.version>
     <plugin.deploy.version>2.8.2</plugin.deploy.version>
+
+    <zeppelin.shade.package>zeppelin-package</zeppelin.shade.package>
 
     <PermGen>64m</PermGen>
     <MaxPermGen>512m</MaxPermGen>
