--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ conf/notebook-authorization.json
 conf/shiro.ini
 conf/credentials.json
 conf/helium.json
+conf/users.json
 
 # other generated files
 spark/dependency-reduced-pom.xml
