--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <groupId>org.apache.zeppelin</groupId>
-  <artifactId>zeppelin-flink_2.10</artifactId>
+  <artifactId>zeppelin-flink_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
   <version>0.8.0-SNAPSHOT</version>
   <name>Zeppelin: Flink</name>
