--- a/ignite/pom.xml
+++ b/ignite/pom.xml
@@ -26,7 +26,7 @@
     <relativePath>..</relativePath>
   </parent>
 
-  <artifactId>zeppelin-ignite_2.10</artifactId>
+  <artifactId>zeppelin-ignite_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
   <version>0.8.0-SNAPSHOT</version>
   <name>Zeppelin: Apache Ignite interpreter</name>
