--- a/conf/shiro.ini.template
+++ b/conf/shiro.ini.template
@@ -62,10 +62,12 @@ sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 #cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
 #securityManager.cacheManager = $cacheManager
 
+### Enables 'HttpOnly' flag in Zeppelin cookies
 cookie = org.apache.shiro.web.servlet.SimpleCookie
 cookie.name = JSESSIONID
-cookie.secure = true
 cookie.httpOnly = true
+### Uncomment the below line only when Zeppelin is running over HTTPS
+#cookie.secure = true
 sessionManager.sessionIdCookie = $cookie
 
 securityManager.sessionManager = $sessionManager
