--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -32,7 +32,7 @@
   <artifactId>zeppelin-interpreter</artifactId>
   <packaging>jar</packaging>
   <version>0.8.0-SNAPSHOT</version>
-  <name>Zeppelin: Interpreter</name>
+  <name>zeppelin-interpreter</name>
   <description>Zeppelin Interpreter</description>
 
   <properties>
